[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "org-taube"
version = "0.1.0"
description = "Email-first capture pipeline for Org mode"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"

[project.scripts]
org-taube = "org_taube.cli:main"
